...
    
    func showAlertTwoButton(model: AlertModel, viewController: UIViewController, actionOne: @escaping () -> Void, actionTwo: @escaping () -> Void) {
        let alert = UIAlertController(title: model.title,
                                      message: model.message,
                                      preferredStyle: .alert)
        
        alert.view.accessibilityIdentifier = "Bye bye!"
        let action1 = UIAlertAction(title: model.buttonTitle, style: .default) { _ in
            actionOne()
        }
        alert.addAction(action1)
        action1.accessibilityIdentifier = "Yes"
        
        if let tittle2 = model.buttonTitle2 {
            let action2  = UIAlertAction(title: tittle2, style: .default) { _ in
                actionTwo()
            }
            action2.accessibilityIdentifier = "No"
...
