...
    @IBOutlet weak var backButton: UIButton!
    var imageURL: String!
    @IBOutlet weak var imageView: UIImageView!
    
    override func viewDidLoad() {
        scrollView.delegate = self
        backButton.accessibilityIdentifier = "singleViewBackButtom"
    
        super.viewDidLoad()
        scrollView.minimumZoomScale = 0.1
        scrollView.maximumZoomScale = 2.0
        showImage()
    }
...
